// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/ViewHeaderSearch return input after click on search button 1`] = `
<div>
  <span
    class="variable variable"
  >
    <input
      class="Editable undefined"
      placeholder="Search text"
      value=""
    />
  </span>
</div>
`;

exports[`components/viewHeader/ViewHeaderSearch return search menu 1`] = `
<div>
  <span
    class="variable variable"
  >
    <button
      class="Button size--small"
      type="button"
    >
      <span>
        Search
      </span>
    </button>
  </span>
</div>
`;

exports[`components/viewHeader/ViewHeaderSearch search text after input after click on search button and search text 1`] = `
<div>
  <span
    class="variable variable"
  >
    <input
      class="Editable undefined"
      placeholder="Search text"
      title="Hello"
      value="Hello"
    />
  </span>
</div>
`;
